# conceptDrift

./: .env.example  .gitignore  ConceptDrift 技术选型与架构设计文档.md  README.md  RUNNING.md  产品需求文档 (PRD)：ConceptDrift — 开发者灵感生成器.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_task_mode.py  0003_add_task_checkpoint.py
backend/app/: __init__.py  agent_runtime.py  config.py  database.py  exporting.py  main.py  models.py  providers.py  schemas.py  source_tools.py  worker.py
backend/tests/: test_agents_provider.py  test_api.py  test_openai_provider.py  test_source_tools.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/reports/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ReportDetail.tsx  ScoreBar.tsx  SettingsPanel.tsx  Shell.tsx  Workspace.tsx
frontend/lib/: api.ts
