[project]
name = "conceptdrift-backend"
version = "0.1.0"
description = "Lightweight FastAPI backend for ConceptDrift."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=2.41.0",
    "openai-agents>=0.17.4",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
